Workshop/4-security/security_exercice/secrets-exposed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-with-secret-annotations
  namespace: shopping
  annotations:
    config.database.password: "SuperSecretPassword123!"
    config.api.key: "sk-prod-1234567890abcdef"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: shopping-backend:latest
